--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   CI:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     
     steps:
       - uses: actions/checkout@v2
@@ -22,12 +22,12 @@ jobs:
       - name: Docker Build and Push
         uses: docker/build-push-action@v2.7.0
         with:
-          context: ./src
-          file: ./src/Dockerfile
+          context: ./
+          file: ./Dockerfile
           push: true
           tags: |
-            rdurbano/docker_conversao_temperatura:latest
-            rdurbano/docker_conversao_temperatura:${{ github.run_number}}
+            rdurbano/docker_conversao_peso:latest
+            rdurbano/docker_conversao_peso:${{ github.run_number}}
   CD:
     needs: [CI]
     runs-on: ubuntu-latest    
@@ -44,7 +44,7 @@ jobs:
       - name: Deploy to Kubernetes cluster
         uses: Azure/k8s-deploy@v1.3
         with:
-          images: rdurbano/docker_conversao_temperatura:${{ github.run_number}}
+          images: rdurbano/docker_conversao_peso:${{ github.run_number}}
           manifests: |
             k8s/deployment.yaml
       
